--- a/views/jade/index.jade
+++ b/views/jade/index.jade
@@ -18,6 +18,11 @@ block content
 
 
 
-                .span3.right-column
+                .span3.right-column.debug
                     .column-header
                         | RIGHT
+        .row-fluid
+          .span3.debug
+          .span3.debug
+          .span3.debug
+          .span3.debug
