--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -378,3 +378,15 @@ color: red;
 .twice-head{
   margin-top: 30px;
 }
+
+.fullscreen{
+width: 95%;
+  min-height: 90%;
+  left: 25%;
+}
+ul#chapters_hierarchy ul{
+  margin: 0 0 5px 10px;
+}
+.container{
+  width: 1140px;
+}
