--- a/views/jade/help-editor.jade
+++ b/views/jade/help-editor.jade
@@ -4,83 +4,70 @@ block content
     .content
         .container
             .page-header
-                h4 Select queries
+                h4 все статьи
         script(type='text/javascript', src="../plugins/tinymce/tinymce.min.js")
+
         #frames.container
+            .row-fluid
+                .span10.right-column
+                    button#add_chapter_btn_load.btn Новая статья
+                    button#edit_chapter_btn_load.btn редактировать
+                    button#reload_hierarchy.btn.btn-primary.pull-right обновить
+            hr
             #index.row-fluid
                 .span9.left-column.debug
-                  ul#chapters_hierarchy
-                .span3.right-column
-                    .column-header
-                        | действия
-                    button#add_chapter_btn_load.btn Новая глава
+                  h5 все статьи
+                  table
+                    thead
+                      tr
+                        td id
+                        td position
+                        td title
+                        td author
+                        td date_created
+                        td is published
+                    tbody#chapters_table
+                .span3.debug
 
-    script(type='text/javascript').
-      var add_chapter_json={};
-      var chapters_hierarchy=$('#chapters_hierarchy');
-      var chapters_json=[];
-      function reLoadHierarchy(callback){
-          chapters_hierarchy.empty();
-          $('#add_chapter_parentlist').empty();
-          $.post( "../admin/help-editor/chapter_hierarchy", {cmd:'get'}, function(data){
-            //console.log(JSON.stringify(data));
-            for(var i=0;i<data.length;++i){
-            chapters_json[data[i].id] = data[i];
-              addChapterToTree(data[i]);
-              $('#add_chapter_parentlist').append('<option'+ ' id="'+data[i].id+'"'+ '>'+data[i].name+'</option>');
-            }
-            if( typeof callback =='function'){callback();};
-          } );
 
-      }
-      function addChapterToTree(data){
 
-        console.log(data);
-        if(data.parent==null){
-          chapters_hierarchy.append('<ul id="'+data.id+'">'+data.name+'</ul>');
-        }else{
-          chapters_hierarchy.find('#'+data.parent).append('<ul id="'+data.id+'">'+data.name+'</ul>');
-        }
-      }
-      $(document).ready(function () {
-        reLoadHierarchy();
-        $('#add_chapter_btn_load').click(function () {
-          reLoadHierarchy();
-          $('#add_chapter_modal').modal();
-        });
-        $('#add_chapter_btn_save').click(function () {
-          add_chapter_json.parent = $('#add_chapter_parentlist option:selected').attr('id');
-          add_chapter_json.name = $('#add_chapter_name').val().trim();
-          add_chapter_json.cmd = 'set';
-          if(add_chapter_json.name.length==0){
-            alert('name must be NOT empty');
-            return;
-          }
-          console.log(JSON.stringify(add_chapter_json));
-          $.post( "../admin/help-editor/chapter_hierarchy", add_chapter_json, function(data){
-            $('#add_chapter_parentlist').val('');
-            $('#add_chapter_name').val('');
-            for(var i=0;i<data.length;++i){
-              addChapterToTree(data[i]);
-              chapters_json[data[i].id] = data[i];
-              $('#add_chapter_parentlist').append('<option'+ ' id="'+data[i].id+'"'+ '>'+data[i].name+'</option>');
-            }
-            $('#add_chapter_modal').modal('hide');
-          } );
 
-        });
-      });
-
-    #add_chapter_modal.modal.hide.fade
+    #add_chapter_modal.modal.hide.fade.fullscreen
         .modal-header
             button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
             h3 Добавление новой главы
-          .modal-body
-                label(for='add_chapter_parentlist') как подраздел
-                  select#add_chapter_parentlist(name='add_chapter_parentlist')
+          .modal-body(style='  height: 90%; min-height:90%')
                 label(for='inputKey') название
                   input#add_chapter_name(type='text', placeholder='')
-
+                label(for='add_pub') опубликовать
+                  input#add_pub(type="checkbox")
+                label(for='add_chapter_content') текст
+                  form(action='')
+                    textarea#add_chapter_content(name='content', style='width: 100%;  height: 90%;')
           .modal-footer
             a.btn(href='#', data-dismiss='modal') Close
             button#add_chapter_btn_save.btn.btn-primary Save
+
+    #edit_chapter_modal.modal.hide.fade.fullscreen
+        .modal-header
+            button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
+            h3 редактировать статью
+          .modal-body(style='  height: 90%; min-height:400px')
+                label(for='edit_what_list') выбор статьи
+                  select#edit_what_list(style='width:60%;')
+                label(for='edit_what_name') новое имя
+                  input#edit_what_name(style='width:60%')
+                label(for='edit_what_pos') position
+                  input#edit_what_pos(style='width:60%')
+                label(for='edit_pub') опубликовать
+                  input#edit_pub(type="checkbox")
+                label(for='edit_chapter_content') текст
+                  form()
+                    textarea#edit_chapter_content(name='content', style='width: 100%;')
+          .modal-footer
+            a.btn(href='#', data-dismiss='modal') Close
+            button#edit_chapter_btn_save.btn.btn-primary Save
+
+
+
+    script(type='text/javascript', src="../admin/app.js")
