helps_tosql table_sorting sessions helps_rewrite_to_standalone_class

--- a/views/jade/admin.jade
+++ b/views/jade/admin.jade
@@ -7,6 +7,7 @@ block content
             .page-header
                 h4 все статьи
         script(type='text/javascript', src="../plugins/tinymce/tinymce.min.js")
+        script(type='text/javascript', src="../plugins/tablesorter/jquery.tablesorter.min.js")
 
         #frames.container
             .row-fluid
@@ -18,15 +19,15 @@ block content
             #index.row-fluid
                 .span9.left-column.debug
                   h5 все статьи
-                  table
+                  table.sortable
                     thead
                       tr
-                        td id
-                        td position
-                        td title
-                        td author
-                        td date_created
-                        td is published
+                        th.sorttable_numeric id
+                        th.sorttable_numeric position
+                        th title
+                        th author
+                        th date_created
+                        th is published
                     tbody#chapters_table
                 .span3.debug
 
@@ -71,4 +72,5 @@ block content
 
 
 
+    script(type='text/javascript', src="../plugins/tablesorter/sorttable.js")
     script(type='text/javascript', src="../admin/app.js")
