--- a/views/jade/admin-layout.jade
+++ b/views/jade/admin-layout.jade
@@ -28,7 +28,7 @@ html
                   span.icon-bar
                 .nav-collapse.collapse
                   ul.nav.pull-left
-                    li.dropdown
+                    //li.dropdown
                       a(href="#", class="dropdown-toggle", data-toggle="dropdown") содержимое
                         b.caret
                       ul.dropdown-menu
@@ -36,9 +36,9 @@ html
                           a(href="../admin/help-editor") раздел справки
                         li
                           a(href="../admin/excercise-editor") раздел задач
-                    li
+                    //li
                       a(href="../admin/markup-editor") блоки
-                    li
+                    //li
                       a(href="../admin/users-editor") пользователи
 
       script(src="../javascripts/jquery.min.js")
